[tool.poetry]
name = "tiktok_your_data_visualization"
version = "0.1.0"
description = ""
authors = ["T.Ando <pengzha0anteng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
streamlit = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
